--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,108 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+/* BASE STYLES */
+
+.wrapper{
+  width:90%;
+  max-width:1440px;
+  margin:0 auto;
+}
+/* CSS HERE */
+
+header{
+  text-align: center;
+}
+
+/* POPUP BOXES */
+
+.popup{
+  position: absolute;
+  background-color:rgba(0,0,0,0.5);
+  color:white;
+  width:100%;
+  height:100%;
+  top:0;
+  display:none;
+  z-index:10;
+}
+
+.popup.active{
+  display:flex;
+  margin:0 auto;
+}
+
+.popup form{
+  background-color:rgba(100,100,120);
+  border-radius:10px;
+  padding:20px 40px;
+  height:150px;
+  margin:50% auto;
+  text-align: center;
+  display:flex;
+  flex-direction:column;
+}
+
+
+/* ADD BUTTONS */
+
+.addButton{
+  width:100px;
+  height:100px;
+  border:none;
+  border-radius:10px;
+}
+
+.addIcon{
+  font-size:60px;
+  color:grey;
+}
+
+/* ADD PAYEE SECTION */
+
+.payeeBox{
+  width:100px;
+  height:100px;
+  border-radius:10px;
+  background-color:lightskyblue;
+  text-align: center;
+  position: relative;
+}
+
+.payeeBox button{
+  position: absolute;
+  top:-5px;
+  right:-5px;
+  background-color:lightcoral;
+  border:none;
+  border-radius:50%;
+  width:25px;
+  height:25px;
+  cursor:pointer;
+}
+
+.payeeBox button:hover{
+  background-color:crimson;
+}
+
+.payeeList{
+  list-style:none;
+  padding:0;
+  display:flex;
+  flex-wrap:wrap;
+  /* justify-content:space-evenly; */
+}
+
+.payeeList li {
+  margin:0 10px 10px 0;
+}
+
+
+/* EXTRA FEES */
+
+.extraFees form{
+  display:flex;
+  flex-direction:column;
+}
+
+
