--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,13 @@ header{
   margin:0 10px 10px 0;
 }
 
+/* MENU ITEM */
+
+.orderList{
+  list-style:none;
+  padding:0;
+}
+
 
 /* EXTRA FEES */
 
