changed structure for database, still having issues though

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ header{
   background-color:rgba(100,100,120);
   border-radius:10px;
   padding:20px 40px;
-  height:150px;
+  height:max-content;
   margin:50% auto;
   text-align: center;
   display:flex;
@@ -77,11 +77,14 @@ header{
 /* ADD PAYEE SECTION */
 
 .payeeBox{
+  display:flex;
+  justify-content: center;
+  align-items: center;
   width:100px;
   height:100px;
   border-radius:10px;
   background-color:lightskyblue;
-  text-align: center;
+  /* text-align: center; */
   position: relative;
 }
 
