--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -19,17 +21,54 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 /* BASE STYLES */
 
+*{
+  --green:#0cc46a;
+  font-family:'Poppins',sans-serif;
+}
+
 .wrapper{
   width:90%;
   max-width:1440px;
   margin:0 auto;
+  position: relative;
 }
+
+main::before{
+  content:'';
+  position: absolute;
+  top:8vh;
+  right:0;
+  bottom:0;
+  left:0;
+  width:100vw;
+  height:90vh;
+  background-image:url('./assets/vecteezy_fast-food-doodle-hand-drawn-set_6050745.jpg');
+  background-position:center;
+  opacity:0.1;
+}
+
 /* CSS HERE */
 
 header{
+  position: relative;
   text-align: center;
+  background-color:white;
+  border:2px white solid;
+  z-index:10;
+  width:100%;
 }
 
+h1{
+  font-family:'Poppins',sans-serif;
+  font-weight:normal;
+}
+
+
+
+.strongFont{
+  font-weight:bold;
+  color:var(--green);
+}
 /* POPUP BOXES */
 
 .popup{
