items are finally storing and added delete button for items

--- a/src/index.css
+++ b/src/index.css
@@ -143,24 +143,21 @@ h1{
   background-color:crimson;
 }
 
-.payeeList{
+.payeeList, .orderList{
   list-style:none;
   padding:0;
   display:flex;
   flex-wrap:wrap;
+  text-align: center;
   /* justify-content:space-evenly; */
 }
 
-.payeeList li {
+.payeeList li, .orderList li {
   margin:0 10px 10px 0;
 }
 
 /* MENU ITEM */
 
-.orderList{
-  list-style:none;
-  padding:0;
-}
 
 
 /* EXTRA FEES */
