--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,265 @@
-.App {
+
+
+/* MY CODE */ 
+
+/* BASE STYLES */
+
+html{
+  font-size:125%;
+}
+
+*{
+  --green:#0cc46a;
+  --delete:#F38375;
+  --delete-hover:#EF6351;
+  font-family:'Poppins',sans-serif;
+}
+
+.wrapper{
+  width:90%;
+  max-width:1440px;
+  margin:0 auto;
+  position: relative;
+}
+
+main::before{
+  content:'';
+  position: absolute;
+  top:8vh;
+  right:0;
+  bottom:0;
+  left:0;
+  width:100vw;
+  height:90vh;
+  background-image:url('./assets/vecteezy_fast-food-doodle-hand-drawn-set_6050745.jpg');
+  background-position:center;
+  opacity:0.1;
+}
+
+/* CSS HERE */
+
+header{
+  position: relative;
   text-align: center;
+  background-color:white;
+  border:2px white solid;
+  z-index:10;
+  width:100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  margin:10px;
+  font-family:'Poppins',sans-serif;
+  font-weight:normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2{
+  margin:10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.strongFont{
+  font-weight:bold;
+  color:var(--green);
+}
+
+input, select{
+  padding:2px 6px;
+  font-family:'Poppins',sans-serif;
+
+}
+input::placeholder{
+  font-family:'Poppins',sans-serif;
+}
+.inputField{
+  background-color:white;
+  border:1px solid grey;
+}
+.inputField input{
+  outline:none;
+  border:none;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.inputField span{
+  padding:0 10px;
+  color:rgba(0,0,0,0.5);
+}
+/* POPUP BOXES */
+
+.popup{
+  position: absolute;
+  background-color:rgba(0,0,0,0.5);
+  color:white;
+  width:100%;
+  height:100%;
+  top:0;
+  display:none;
+  z-index:10;
+}
+
+.popup.active{
+  display:flex;
+  margin:0 auto;
+}
+
+.popup form{
+  background-color:rgba(100,100,120);
+  border-radius:10px;
+  padding:20px 40px;
+  height:max-content;
+  margin: auto;
+  text-align: center;
+  display:flex;
+  flex-direction:column;
+}
+.addPayeePopup label{
+  padding-bottom:10px;
+}
+
+.actionButton{
+  display:flex;
+  justify-content:space-evenly;
+  padding-top:10px;
+}
+
+.actionButton button{
+  font-family:'Poppins',sans-serif;
+  border:none;
+  border-radius:4px;
+  padding:4px 8px;
+}
+
+fieldset{
+  border:none;
+}
+
+.addItemPopup label{
+  padding:10px;
+}
+
+/* ADD ITEM POP UP */
+.addItemPopup fieldset{
+  display:flex;
+  flex-direction:column;
+}
+
+.addItemPopup label{
+  text-align-last: left;
+}
+
+.addItem form{
+  padding: 10px;
+}
+
+/* ADD BUTTONS */
+
+.addButton{
+  width:100px;
+  height:100px;
+  border:none;
+  border-radius:10px;
+}
+
+.addIcon{
+  font-size:60px;
+  color:grey;
+}
+
+/* ADD PAYEE SECTION */
+
+.payeeBox{
+  display:flex;
+  flex-direction:column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width:100px;
+  height:100px;
+  border-radius:10px;
+  background-color:lightblue;
+  /* text-align: center; */
+  position: relative;
+}
+.payeeBox p {
+  margin:0;
 }
 
-.App-link {
-  color: #61dafb;
+/* DELETE ICON */
+.payeeBox button{
+  position: absolute;
+  top:-5px;
+  right:-5px;
+  background-color:var(--delete);
+  border:none;
+  border-radius:50%;
+  width:25px;
+  height:25px;
+  cursor:pointer;
+  transition:0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.payeeBox button:hover, .payeeBox button:focus{
+  background-color:crimson;
 }
+
+.payeeList, .orderList{
+  list-style:none;
+  padding:0;
+  display:flex;
+  flex-wrap:wrap;
+  text-align: center;
+  margin:10px 0;
+  /* justify-content:space-evenly; */
+}
+
+.payeeList li, .orderList li {
+  margin:0 10px 10px 0;
+}
+
+/* MENU ITEM */
+
+
+
+/* EXTRA FEES */
+
+.extraFees form{
+  display:flex;
+  flex-direction:column;
+}
+
+.subtotalDiv, .serviceFeeDiv, .deliveryFeeDiv, .grandTotalDiv{
+  display:flex;
+  align-items:center;
+}
+
+.serviceFeeDiv label, .deliveryFeeDiv label , .grandTotalDiv label{
+  width:150px;
+  text-align-last: left;
+}
+
+.serviceFeeDiv input, .deliveryFeeDiv input , .grandTotalDiv input{
+  width:200px;
+}
+
+.calculateButton{
+  background-color:var(--green);
+  border:none;
+  padding:5px 10px;
+  border-radius:3px;
+  font-family:'Poppins',sans-serif;
+  color:white;
+  transition:0.3s background-color;
+}
+
+.calculateButton:hover, .calculateButton:focus{
+  background-color:forestgreen;
+}
+
