--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html{
 
 *{
   --green:#0cc46a;
+  --dark-bg:rgb(34, 34, 34);
   --delete:#F38375;
   --delete-hover:#EF6351;
   --input-bg:#dbdbdb;
@@ -24,7 +25,7 @@ html{
 }
 
 
-main::before{
+/* main::before{
   content:'';
   position: absolute;
   top:0;
@@ -35,7 +36,7 @@ main::before{
   background-position:center;
   background-size:cover;
   opacity:0.1;
-}
+} */
 
 /* CSS HERE */
 
@@ -105,11 +106,25 @@ input::-webkit-inner-spin-button {
 
 .introSection{
   padding:10px;
-  background-color:white;
+  background-color:var(--dark-bg);
   height:92vh;
 }
 
+.introSection h2 {
+  text-align: center;
+}
+.introSection .wrapper{
+  background-color:white;
+  border-radius:20px;
+  padding:20px 40px 40px;
+}
+
+.callToAction{
+  text-align: center;
+}
 .navigateButton{
+  width:200px;
+  margin: 0 auto;
   background-color:#0cc46a;
   color:white;
   text-decoration:none;
@@ -317,7 +332,7 @@ footer{
   position: relative;
   padding:10px;
   color:white;
-  background-color:rgb(36, 36, 36);
+  background-color:var(--dark-bg);
   z-index:100;
   text-align: center;
 }
