--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 
 /* BASE STYLES */
 
+
+
 html{
   font-size:125%;
 }
@@ -25,26 +27,14 @@ html{
 }
 
 
-/* main::before{
-  content:'';
-  position: absolute;
-  top:0;
-  right:0;
-  left:0;
-  height:100vh;
-  background-image:url('./assets/vecteezy_fast-food-doodle-hand-drawn-set_6050745.jpg');
-  background-position:center;
-  background-size:cover;
-  opacity:0.1;
-} */
-
 /* CSS HERE */
+
+/* HEADER */
 
 header{
   display:flex;
   position: relative;
   text-align: center;
-  background-color:white;
   height:5vh;
   z-index:10;
   width:100%;
@@ -53,12 +43,15 @@ header{
 }
 
 h1{
+  font-size:clamp(1.4rem, 5vw, 2.5rem);
   margin:10px;
   font-family:'Poppins',sans-serif;
   font-weight:normal;
 }
 
 h2{
+  font-size:clamp(1rem, 5vw, 1.5rem);
+
   margin:10px;
 }
 
@@ -102,11 +95,54 @@ input::-webkit-inner-spin-button {
   color:rgba(0,0,0,0.5);
 }
 
+/* DARK / LIGHT */
+
+/* TOGGLE FOR DARK/LGIHT MODE */
+.toggleThemeButton{
+  position: relative;
+  align-self: center;
+  border:none;
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  transition:background-color 0.3s;
+}
+
+.toggleThemeButton:hover, .toggleThemeButton:focus{
+  background-color:var(--green);
+}
+
+.toggleThemeButton:hover .toolTipText, .toggleThemeButton:focus .toolTipText{
+  visibility:visible;
+  opacity:1;
+}
+
+.toolTipText{
+  opacity:0;
+  transition: opacity 0.3s;
+  visibility:hidden;
+  width:max-content;
+  font-size:0.8rem;
+  background-color:white;
+  position: absolute;
+  border-radius:20px;
+  right:50px;
+  padding:2px 5px;
+}
+
+.darkDisplay{
+  background-color:var(--dark-bg);
+  color:white;
+}
+
+.introSection .darkDisplay{
+  background-color:rgb(78, 78, 78);
+}
+
 /* INTRO SECTION */
 
 .introSection{
   padding:10px;
-  background-color:var(--dark-bg);
   height:92vh;
 }
 
@@ -114,9 +150,9 @@ input::-webkit-inner-spin-button {
   text-align: center;
 }
 .introSection .wrapper{
-  background-color:white;
   border-radius:20px;
   padding:20px 40px 40px;
+  margin-top:50px;
 }
 
 .callToAction{
@@ -137,14 +173,20 @@ input::-webkit-inner-spin-button {
   background-color:white;
   color:black;
 }
+
+/* MAIN */
+
+
+
+
 /* POPUP BOXES */
 
 .popup{
   position: absolute;
   background-color:rgba(0,0,0,0.5);
   color:white;
-  width:100%;
-  height:100%;
+  width:100vw;
+  height:100vh;
   top:0;
   left:0;
   display:none;
@@ -191,6 +233,8 @@ fieldset{
 .addItemPopup label{
   padding:10px;
 }
+
+
 
 /* ADD ITEM POP UP */
 .addItemPopup fieldset{
@@ -329,10 +373,22 @@ fieldset{
 /* footer */
 
 footer{
-  position: relative;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  display:flex;
+  width:100%;
   padding:10px;
-  color:white;
-  background-color:var(--dark-bg);
-  z-index:100;
+  bottom:0;
+  color:black;
+  border-top:var(--dark-bg) 1.5px solid;
+  height:5vh;
   text-align: center;
 }
+
+footer.darkDisplay{
+  border-top:white 1.5px solid;
+  background-color:var(--dark-bg);
+  color:white;
+}
+
