--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,15 @@ html{
   position: relative;
 }
 
+p{
+  font-size:clamp(0.9rem, 4vw, 1rem);
+}
+
+label{
+  font-size:clamp(0.9rem, 4vw, 1rem);
+}
+
+
 
 /* CSS HERE */
 
@@ -35,7 +44,7 @@ header{
   display:flex;
   position: relative;
   text-align: center;
-  height:5vh;
+  height:10vh;
   z-index:10;
   width:100%;
   justify-content: center;
@@ -50,8 +59,7 @@ h1{
 }
 
 h2{
-  font-size:clamp(1rem, 5vw, 1.5rem);
-
+  font-size:clamp(1rem, 5vw, 1.4rem);
   margin:10px;
 }
 
@@ -123,10 +131,11 @@ input::-webkit-inner-spin-button {
   visibility:hidden;
   width:max-content;
   font-size:0.8rem;
+  top:50px;
+  left:-10px;
   background-color:white;
   position: absolute;
   border-radius:20px;
-  right:50px;
   padding:2px 5px;
 }
 
@@ -135,11 +144,40 @@ input::-webkit-inner-spin-button {
   color:white;
 }
 
+.wrapper.lightDisplay{
+  background-color:rgb(230, 230, 230);
+}
+
 .introSection .darkDisplay{
   background-color:rgb(78, 78, 78);
 }
 
 /* INTRO SECTION */
+
+/* back button */
+
+
+.returnToButton p {
+  margin:0 20px;
+  font-size:clamp(0.7rem, 4vw,0.8rem);
+
+}
+
+.returnToLink{
+  color:black;
+  display:flex;
+  align-items: center;
+  text-decoration:none;
+  transition:color 0.3s;
+}
+
+.returnToLink.darkDisplay{
+  color:white;
+}
+
+.returnToLink:hover{
+  color:var(--green);
+}
 
 .introSection{
   padding:10px;
@@ -153,6 +191,10 @@ input::-webkit-inner-spin-button {
   border-radius:20px;
   padding:20px 40px 40px;
   margin-top:50px;
+}
+
+.introSection ul{
+  font-size:clamp(0.9rem, 4vw, 1rem);
 }
 
 .callToAction{
@@ -173,9 +215,6 @@ input::-webkit-inner-spin-button {
   background-color:white;
   color:black;
 }
-
-/* MAIN */
-
 
 
 
@@ -224,6 +263,12 @@ input::-webkit-inner-spin-button {
   border:none;
   border-radius:4px;
   padding:4px 8px;
+  transition:0.3s all;    
+}
+
+.actionButton button:hover, .actionButton button:focus{
+  background-color:grey;
+  color:white;
 }
 
 fieldset{
@@ -258,11 +303,20 @@ fieldset{
   height:100px;
   border:none;
   border-radius:10px;
+  transition:0.3s all;
 }
 
 .addIcon{
   font-size:60px;
   color:grey;
+  transition:0.3s all;
+
+}
+
+
+.addButton:hover, .addButton:focus, .addButton:hover .addIcon, .addButton:focus .addIcon{
+  background-color:var(--green);
+  color:black;
 }
 
 /* ADD PAYEE SECTION */
@@ -281,12 +335,16 @@ fieldset{
   position: relative;
   word-wrap:break-word;  
 }
+
+.payeeBox.darkDisplay{
+  background-color:#40647a;
+}
 .payeeBox p {
   margin:0;
 }
 
 /* DELETE ICON */
-.payeeBox button{
+.deleteButton{
   position: absolute;
   top:-5px;
   right:-5px;
@@ -299,9 +357,19 @@ fieldset{
   transition:0.3s;
 }
 
-.payeeBox button:hover, .payeeBox button:focus{
+.deleteButton:hover, .deleteButton:focus{
   background-color:crimson;
 }
+
+.deleteButton.darkDisplay{
+  background-color:crimson;
+}
+
+.deleteButton.darkDisplay:hover{
+  background-color:maroon;
+}
+
+
 
 /* render list */
 .payeeList, .orderList, .renderPayees{
@@ -322,7 +390,7 @@ fieldset{
 /* EXTRA FEES */
 
 .extraFees{
-  margin-bottom:20px;
+  padding-bottom:20px;
 }
 
 .extraFees h2{
@@ -348,7 +416,7 @@ fieldset{
 
 .serviceFeeDiv label, .deliveryFeeDiv label , .taxDiv label, .tipDiv label, .grandTotalDiv label{
   width:150px;
-  text-align-last: left;
+  text-align: left;
 }
 
 .serviceFeeDiv input, .deliveryFeeDiv input , .taxDiv input, .tipDiv input, .grandTotalDiv input{
@@ -375,14 +443,11 @@ fieldset{
 footer{
   justify-content: center;
   align-items: center;
-  position: absolute;
   display:flex;
   width:100%;
-  padding:10px;
-  bottom:0;
   color:black;
   border-top:var(--dark-bg) 1.5px solid;
-  height:5vh;
+  height:8vh;
   text-align: center;
 }
 
@@ -392,3 +457,29 @@ footer.darkDisplay{
   color:white;
 }
 
+/* MEDIA QUERY */
+@media (max-width:400px){
+  header{
+    flex-direction:column-reverse;
+  }
+  .introSection ul {
+    padding:0;
+  }
+  
+  .extraFees h2{
+    text-align:left;
+  }
+  .extraFees{
+    text-align: center;
+  }
+  .serviceFeeDiv, .deliveryFeeDiv, .taxDiv, .tipDiv, .grandTotalDiv{
+    flex-direction:column;
+    align-items:center;
+    margin-bottom:20px;
+    justify-content: center;
+  }
+  .subtotalDiv p, .serviceFeeDiv label, .deliveryFeeDiv label, .taxDiv label, .tipDiv label{
+    margin-bottom:10px;
+    text-align: center;
+  }
+}
