--- a/src/App.css
+++ b/src/App.css
@@ -231,10 +231,11 @@ input::-webkit-inner-spin-button {
   position: absolute;
   background-color:rgba(0,0,0,0.5);
   color:white;
-  width:100vw;
+  width:100%;
   height:100vh;
   top:0;
   left:0;
+  
   display:none;
   z-index:10;
 }
@@ -250,6 +251,7 @@ input::-webkit-inner-spin-button {
   padding:20px 40px;
   height:max-content;
   margin: auto;
+  width:300px;
   text-align: center;
   display:flex;
   flex-direction:column;
@@ -257,7 +259,6 @@ input::-webkit-inner-spin-button {
 .addPayeePopup label{
   padding-bottom:10px;
 }
-
 
 .actionButton{
   display:flex;
@@ -280,6 +281,7 @@ input::-webkit-inner-spin-button {
 
 fieldset{
   border:none;
+  padding:0;
 }
 
 .addItemPopup label{
@@ -303,6 +305,10 @@ main.darkDisplay{
 .addItemPopup fieldset{
   display:flex;
   flex-direction:column;
+}
+
+.addItemPopup input{
+  width:100%;
 }
 
 .addItemPopup label{
