--- a/src/App.css
+++ b/src/App.css
@@ -238,9 +238,9 @@ input::-webkit-inner-spin-button {
   background-color:rgba(0,0,0,0.5);
   color:white;
   width:100%;
-  height:100vh;
   top:0;
   left:0;
+  bottom:0;
   
   display:none;
   z-index:10;
