--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 
 
+
 html{
   font-size:125%;
 }
@@ -395,7 +396,7 @@ main.darkDisplay{
   background-color:crimson;
 }
 
-.deleteButton.darkDisplay:hover{
+.deleteButton.darkDisplay:hover, .deleteButton.darkDisplay:focus{
   background-color:maroon;
 }
 
