--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,5 @@
 @import url("./DarkMode.css");
 @import url("./Main.css");
 @import url("./Footer.css");
+@import url("./ErrorPage.css");
 @import url("./MediaQueries.css");
